--- a/src/app/components/personal-info/personal-info.component.html
+++ b/src/app/components/personal-info/personal-info.component.html
@@ -1,23 +1,18 @@
-  <div 
-    class="flex justify-content-between flex-wrap row-gap-3" 
-    style="border-color: rgba(200, 200, 200, 0.2);"
-  >      <!-- pb-5 border-bottom-1 -->
-    <div class="flex gap-3">
-      <img src="assets/DLopez-cv-picture.png" alt="Daniel Lopez picture" class="w-9rem">
-      <div class="flex flex-column justify-content-between py-1">
-        <div class="flex flex-column gap-1 sm:gap-2">
-          <span class="text-2xl sm:text-3xl text-700">DANIEL</span>
-          <span class="text-2xl sm:text-3xl text-700">LÓPEZ</span>
-          <span class="text-2xl sm:text-3xl text-700">FERNÁNDEZ</span>
-        </div>
-        <span class="text-2xl text-gradient-gold">SOFTWARE ENGINEER</span>
+  <div class="flex flex-column gap-6 sm:gap-7 align-items-center">
+    <div class="flex gap-2 sm:gap-4">
+      <img src="assets/DLopez-cv-picture.png" alt="Daniel Lopez picture" class="w-8rem sm:w-11rem">
+      <div class="flex flex-column justify-content-between text-5xl sm:text-6xl text-800 font-light">
+        <span class="">DANIEL</span>
+        <span class="">LÓPEZ</span>
+        <span class="">FERNÁNDEZ</span>
       </div>
     </div>
-    <div class="w-full justify-content-end align-items-end mt-2 sm:mt-4 gap-3">
-      <p-button styleClass="bg-primary-400 border-none" [size]="'small'" [rounded]="true" icon="pi pi-phone" [disabled]="true"></p-button>
-      <p-button styleClass="bg-primary-400 border-none" [size]="'small'" [rounded]="true" icon="pi pi-envelope" [disabled]="true"></p-button>
+    <span class="text-6xl sm:text-7xl sm:font-light text-gradient text-center">SOFTWARE ENGINEER</span>
+    <div class="flex gap-4">
+      <p-button styleClass="bg-primary-400 border-none" [size]="'large'" [rounded]="true" icon="pi pi-phone" [disabled]="true"></p-button>
+      <p-button styleClass="bg-primary-400 border-none" [size]="'large'" [rounded]="true" icon="pi pi-envelope" [disabled]="true"></p-button>
       <a  href="https://www.linkedin.com/in/daniel-lopez-fernandez-b14a9512a/" target="_blank">
-        <p-button styleClass="bg-primary-700 border-none" [size]="'small'" [rounded]="true" icon="pi pi-linkedin"></p-button>
+        <p-button styleClass="bg-primary border-none" [size]="'large'" [rounded]="true" icon="pi pi-linkedin"></p-button>
       </a>
     </div>
   </div>
