--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div class="main-wrapper">
   <div class="main">
-    <div class="mt-8">
+    <div class="py-8">
       <app-personal-info></app-personal-info>
+    </div>
+    <div class="py-8 mt-5">
+      <app-experience></app-experience>
     </div>
   </div>
 </div>
