--- a/src/app/components/personal-info/personal-info.component.html
+++ b/src/app/components/personal-info/personal-info.component.html
@@ -1,14 +1,14 @@
   <div class="flex flex-column gap-6 sm:gap-7 align-items-center">
-    <div class="flex gap-2 sm:gap-4">
+    <div class="flex gap-2 sm:gap-4 fadein animation-duration-1000">
       <img src="assets/DLopez-cv-picture.png" alt="Daniel Lopez picture" class="w-8rem sm:w-11rem">
-      <div class="flex flex-column justify-content-between text-5xl sm:text-6xl text-800 font-light">
+      <div class="flex flex-column justify-content-between text-5xl sm:text-6xl text-800">
         <span class="">DANIEL</span>
         <span class="">LÓPEZ</span>
         <span class="">FERNÁNDEZ</span>
       </div>
     </div>
-    <span class="text-6xl sm:text-7xl sm:font-light text-gradient text-center">SOFTWARE ENGINEER</span>
-    <div class="flex gap-4">
+    <span class="text-6xl sm:text-7xl text-gradient text-center fadein animation-duration-1000">SOFTWARE ENGINEER</span>
+    <div class="flex gap-4 fadein animation-duration-1000">
       <p-button styleClass="bg-primary-400 border-none" [size]="'large'" [rounded]="true" icon="pi pi-phone" [disabled]="true"></p-button>
       <p-button styleClass="bg-primary-400 border-none" [size]="'large'" [rounded]="true" icon="pi pi-envelope" [disabled]="true"></p-button>
       <a  href="https://www.linkedin.com/in/daniel-lopez-fernandez-b14a9512a/" target="_blank">
