Experience item component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <app-personal-info></app-personal-info>
     </div>
     <div class="py-8 mt-5">
-      <app-experience></app-experience>
+      <app-experience-section></app-experience-section>
     </div>
   </div>
 </div>
