--- a/src/app/components/experience-section/experience-section.component.scss
+++ b/src/app/components/experience-section/experience-section.component.scss
@@ -10,4 +10,5 @@
     background: linear-gradient(to right, var(--primary-600) 30%, var(--pink-600) 120%) ;
     padding-left: 1rem;
     padding-right: 1rem;
+    color: black;
 }
