--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,76 @@
-.main-wrapper {
+.sections-wrapper {
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 
-.main {
-    width: 100%;
-    max-width: 1200px;
+.section {
+    // width: 100%;
+    // max-width: 1200px;
+    position: relative;
+    padding-left: 15%;
+    padding-right: 15%;
+
+    @media(max-width: 1300px) {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    @media(max-width: 768px) {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+    @media(max-width: 576px) {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
 }
+
+.experience-bg{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    background-image:url("../assets/dotsbg.png");
+    filter: blur(150px);
+    -webkit-filter: blur(150px);
+    // border-top: 30px solid var(--primary-600);
+    // border-bottom: 30px solid var(--pink-600);
+    background-size: cover;
+    // border-top: 100px solid black;
+}
+
+.other-projects-bg{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    border-top: 1px solid var(--pink-600);
+    border-bottom: 1px solid var(--pink-600);
+    background-color: black;
+    background-size: cover;
+}
+
+// .blur-line {
+//     /* The image used */
+//     background-image:url(http://static4.wikia.nocookie.net/__cb20130612023354/harrypotter/images/d/d1/Gradient-blue-background.jpg);
+
+// /* Add the blur effect */
+// filter: blur(8px);
+// -webkit-filter: blur(8px);
+
+// /* Full height */
+// height: 100%;
+
+// /* Center and scale the image nicely */
+// background-position: center;
+// background-repeat: no-repeat;
+// background-size: cover;
+
+// border: 1px solid red;
+// }
