--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,11 @@
     <app-personal-info></app-personal-info>
   </div>
   <!-- <div class="blur-line"></div> -->
-  <div class="section pb-8 pt-0 sm:pt-5" style="margin-top: 8rem;">
-    <div class="experience-bg" appParallax [ratio]="1"></div>
+  <div class="section pt-0 sm:pt-5" style="margin-top: 8rem; padding-bottom: 7rem;">
+    <div class="experience-bg" appParallax [ratio]="0.5"></div>
     <app-experience-section ></app-experience-section>
   </div>
-  <div class="section py-8 w-full" >
+  <div class="section w-full" style="padding-top: 7rem; padding-bottom: 7rem;">
     <div class="other-projects-bg" appParallax [ratio]="1" ></div>    <!-- style="background: linear-gradient(to right, black 30%, var(--pink-600) 220%) ;" -->
     <app-other-projects-section></app-other-projects-section>
   </div>
