--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -50,8 +50,8 @@
     z-index: -1;
     filter: blur(5px);
     -webkit-filter: blur(5px);
-    border-top: 1px solid var(--pink-600);
-    border-bottom: 1px solid var(--pink-600);
+    border-top: 1px solid var(--primary-600);
+    border-bottom: 1px solid var(--primary-600);
     background-color: black;
     background-size: cover;
 }
