--- a/src/app/components/experience-section/experience-section.component.scss
+++ b/src/app/components/experience-section/experience-section.component.scss
@@ -12,3 +12,16 @@
     padding-right: 1rem;
     color: black;
 }
+
+.experience-card {
+    max-height: 550px;
+    overflow: scroll; 
+    border-radius: 20px; 
+    // background-color: rgb(0,0,0,0.9); 
+    border: 1px solid rgb(100, 100, 100,0.7);
+
+    background: color-mix(in srgb, black 25%, transparent);//var(--surface-100);//rgba(255, 255, 255, 0.85);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.6px);
+    -webkit-backdrop-filter: blur(6.6px);
+}
