--- a/src/app/components/other-projects-section/other-projects-section.component.html
+++ b/src/app/components/other-projects-section/other-projects-section.component.html
@@ -1,28 +1,28 @@
 <div class=" animation-duration-1000 animation-ease-in flex flex-column align-items-center gap-7">
-  <span class="text-6xl gradient-bg">OTHER PROJECTS</span>
+  <span class="text-6xl gradient-bg font-light">OTHER PROJECTS</span>
 
   <div class="flex gap-5 flex-wrap">
     <div class="project-card xl:flex-1">
       <div class="flex justify-content-between">
         <div class="flex flex-column">
-          <p class="text-primary-600 text-lg mb-0">INTERNATIONAL GRADUATE CONSULTANT 
+          <p class="text-primary-600 text-lg mb-0">International Graduate Consultant
             <span class="font-light text-primary-700">
-              AT 
+              at 
               <a 
                 href="https://akkodis.com" 
                 target="_blank"
-                class="text-primary-700 hover:text-cyan-500 transition-duration-300"
+                class="text-primary-700 hover:text-pink-500 transition-duration-300"
                 style="text-decoration: none;"
               >
-                AKKA TECHNOLOGIES (NOW AKKODIS) 
+                AKKA Technologies (now AKKODIS) 
               </a>
             </span>
           </p>
           <p class="text-500 flex align-items-center gap-2 mt-3"><i class="pi pi-map-marker"></i>Nice, France | 2020</p>
         </div>
       </div>
-      <p class="text-700 text-justify">We were developing a <span class="font-bold text-600">Virtual Reality</span> app for <span class="font-bold text-cyan-600">Android</span>
-        (using <span class="font-bold text-cyan-600">Java</span>) when the project got on hold due to the 
+      <p class="text-700 text-justify">We were developing a <span class="font-bold text-600">Virtual Reality</span> app for <span class="font-bold text-pink-600">Android</span>
+        (using <span class="font-bold text-pink-600">Java</span>) when the project got on hold due to the 
         Coronavirus crisis. Being put under partial 
         unemployment until new projects were available, I took 
         this time to learn new technologies and improve my 
@@ -32,37 +32,36 @@
     <div class="project-card xl:flex-1">
       <div class="flex justify-content-between">
         <div class="flex flex-column">
-          <p class="text-primary-600 text-lg mb-0">FINAL THESIS - ANDROID APP FOR SHARING MUSICAL 
-            RESOURCES</p>
+          <p class="text-primary-600 text-lg mb-0">Final thesis - Android App for Sharing Musical Resources </p>
           <p class="text-500 flex align-items-center gap-2 mt-3"><i class="pi pi-map-marker"></i>University of Málaga – Málaga, Spain | March-June 2019</p>
         </div>
       </div>
-      <p class="text-700 text-justify">Developed an <span class="font-bold text-cyan-600">Android</span> app that lets the user generate 
+      <p class="text-700 text-justify">Developed an <span class="font-bold text-pink-600">Android</span> app that lets the user generate 
         a video from a song and share it in social media. Used 
-        <span class="font-bold text-600">Android Studio</span> and <span class="font-bold text-cyan-600">Java</span>.</p>
+        <span class="font-bold text-600">Android Studio</span> and <span class="font-bold text-pink-600">Java</span>.</p>
     </div>
 
     <div class="project-card xl:flex-1">
       <div class="flex justify-content-between">
         <div class="flex flex-column">
-          <p class="text-primary-600 text-lg mb-0">INTERNATIONAL GRADUATE CONSULTANT 
+          <p class="text-primary-600 text-lg mb-0">International Graduate Consultant
             <span class="font-light text-primary-700">
-              AT 
+              at 
               <a 
                 href="https://akkodis.com" 
                 target="_blank"
-                class="text-primary-700 hover:text-cyan-500 transition-duration-300"
+                class="text-primary-700 hover:text-pink-500 transition-duration-300"
                 style="text-decoration: none;"
               >
-                AKKA TECHNOLOGIES (NOW AKKODIS) 
+                AKKA Technologies (now AKKODIS) 
               </a>
             </span>
           </p>
           <p class="text-500 flex align-items-center gap-2 mt-3"><i class="pi pi-map-marker"></i>Nice, France | 2020</p>
         </div>
       </div>
-      <p class="text-700 text-justify">We were developing a <span class="font-bold text-600">Virtual Reality</span> app for <span class="font-bold text-cyan-600">Android</span>
-        (using <span class="font-bold text-cyan-600">Java</span>) when the project got on hold due to the 
+      <p class="text-700 text-justify">We were developing a <span class="font-bold text-600">Virtual Reality</span> app for <span class="font-bold text-pink-600">Android</span>
+        (using <span class="font-bold text-pink-600">Java</span>) when the project got on hold due to the 
         Coronavirus crisis. Being put under partial 
         unemployment until new projects were available, I took 
         this time to learn new technologies and improve my 
