--- a/src/app/components/other-projects-section/other-projects-section.component.scss
+++ b/src/app/components/other-projects-section/other-projects-section.component.scss
@@ -10,5 +10,9 @@
   border-radius: 20px;
   padding-left: 1rem;
   padding-right: 1rem;
-  background-color: black;
+  
+  background: color-mix(in srgb, var(--surface-100) 35%, transparent);//var(--surface-100);//rgba(255, 255, 255, 0.85);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.6px);
+  -webkit-backdrop-filter: blur(6.6px);
 }
