--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,4 +11,8 @@
     <div class="other-projects-bg" appParallax [ratio]="1" ></div>    <!-- style="background: linear-gradient(to right, black 30%, var(--pink-600) 220%) ;" -->
     <app-other-projects-section></app-other-projects-section>
   </div>
+  <div class="section pt-0 sm:pt-5" style="margin-top: 8rem; padding-bottom: 7rem;">
+    <div class="experience-bg" appParallax [ratio]="0.5"></div>
+    <app-education-section ></app-education-section>
+  </div>
 </div>
