Animations when scrolled, padding top

--- a/src/app/components/other-projects-section/other-projects-section.component.html
+++ b/src/app/components/other-projects-section/other-projects-section.component.html
@@ -1,7 +1,7 @@
-<div class=" animation-duration-1000 animation-ease-in flex flex-column align-items-center gap-7">
-  <span class="text-6xl gradient-bg font-light">OTHER PROJECTS</span>
+<div class="flex flex-column align-items-center gap-7">
+  <span #title class="text-5xl gradient-bg font-light opacity-0 animation-duration-1000">OTHER PROJECTS</span>
 
-  <div class="flex gap-5 flex-wrap">
+  <div #cards class="flex gap-5 flex-wrap opacity-0 animation-duration-1000">
     <div class="project-card xl:flex-1">
       <div class="flex justify-content-between">
         <div class="flex flex-column">
