Other projects item component

--- a/src/app/components/experience-section/experience-section.component.html
+++ b/src/app/components/experience-section/experience-section.component.html
@@ -1,5 +1,5 @@
 <div class="animation-duration-1000 animation-ease-in flex flex-column align-items-center gap-7">
-  <span #sectionTitle class="text-5xl font-light opacity-0 animation-duration-1000">EXPERIENCE</span>
+  <span #sectionTitle class="text-5xl font-light opacity-0 animation-duration-1000 text-white">EXPERIENCE</span>
   <!-- <span class="text-600 text-6xl font-light">EXPERIENCE</span> -->
   <!-- <hr class="hr-gradient" /> -->
   <div #card class="flex flex-column align-items-center gap-5 p-5 experience-card opacity-0 animation-duration-1000">
