--- a/src/app/components/education-section/education-section.component.html
+++ b/src/app/components/education-section/education-section.component.html
@@ -1,3 +1,3 @@
 <div class=" animation-duration-1000 animation-ease-in flex flex-column align-items-center gap-7">
-  <span class="text-5xl font-light">EDUCATION</span>
+  <span class="text-5xl font-light text-white">EDUCATION</span>
 </div>
