--- a/src/app/components/experience-section/experience-section.component.scss
+++ b/src/app/components/experience-section/experience-section.component.scss
@@ -15,7 +15,8 @@
 
 .experience-card {
     max-height: 550px;
-    overflow: scroll; 
+    overflow-y: scroll; 
+    overflow-x: hidden;
     border-radius: 20px; 
     // background-color: rgb(0,0,0,0.9); 
     border: 1px solid rgb(100, 100, 100,0.7);
@@ -25,3 +26,24 @@
     backdrop-filter: blur(6.6px);
     -webkit-backdrop-filter: blur(6.6px);
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
