--- a/src/app/components/other-projects-section/other-projects-section.component.html
+++ b/src/app/components/other-projects-section/other-projects-section.component.html
@@ -7,6 +7,7 @@
         [title]="project.title"
         [company]="project.company"
         [location]="project.location"
+        [date]="project.date"
         [description]="project.description"
       >
       </app-other-projects-item>
