--- a/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.scss
+++ b/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.scss
@@ -79,6 +79,8 @@
       border: none;
       padding-top: 0;
       padding-bottom: 0;
+      padding-top: 1rem;
+      padding-bottom: 1rem;
   
       @media (min-width: 576px) {
         padding-left: 1.5rem;
@@ -91,6 +93,7 @@
       padding-right: 1.5rem;
       background-color: transparent;
       border: none;
+      padding-top: 0;
       // overflow: scroll;
   
       @media (min-width: 576px) {
