Education timeline WIP

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,11 +8,16 @@
     <app-experience-section ></app-experience-section>
   </div>
   <div class="section w-full" style="padding-top: 7rem; padding-bottom: 7rem;">
-    <div class="other-projects-bg" appParallax [ratio]="1" ></div>    <!-- style="background: linear-gradient(to right, black 30%, var(--pink-600) 220%) ;" -->
+    <!-- <div class="other-projects-bg" appParallax [ratio]="1" ></div>    --><!-- style="background: linear-gradient(to right, black 30%, var(--pink-600) 220%) ;" -->
     <app-other-projects-section></app-other-projects-section>
   </div>
   <div class="section pt-0 sm:pt-5" style="margin-top: 8rem; padding-bottom: 7rem;">
-    <div class="experience-bg" appParallax [ratio]="0.5"></div>
+    <div class="education-bg" appParallax [ratio]="0.7"></div>
     <app-education-section ></app-education-section>
+  </div>
+  <div class="section pt-0 sm:pt-5" style="margin-top: 8rem; padding-bottom: 7rem;">
+    <!-- <div class="" appParallax [ratio]="0.3"></div> -->
+    <div class="other-projects-bg" appParallax [ratio]="1" style="background: linear-gradient(to right, black 30%, var(--pink-600) 220%) ;"></div>
+    <app-aboutme-section ></app-aboutme-section>
   </div>
 </div>
