--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -56,6 +56,22 @@
     background-size: cover;
 }
 
+.education-bg{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    background-image:url("../assets/dotsbg-fliped.png");
+    filter: blur(150px);
+    -webkit-filter: blur(150px);
+    // border-top: 30px solid var(--primary-600);
+    // border-bottom: 30px solid var(--pink-600);
+    background-size: cover;
+    // border-top: 100px solid black;
+}
+
 // .blur-line {
 //     /* The image used */
 //     background-image:url(http://static4.wikia.nocookie.net/__cb20130612023354/harrypotter/images/d/d1/Gradient-blue-background.jpg);
