--- a/src/app/components/education-section/education-section.component.html
+++ b/src/app/components/education-section/education-section.component.html
@@ -1,3 +1,34 @@
 <div class=" animation-duration-1000 animation-ease-in flex flex-column align-items-center gap-7">
-  <span class="text-5xl font-light text-white">EDUCATION</span>
+  <span #title class="text-5xl font-light text-white opacity-0">EDUCATION</span>
+  <!-- <p-timeline [value]="events" [layout]="'horizontal'">
+    <ng-template pTemplate="content" let-event>
+        <small class="p-text-secondary">{{ event.date }}</small>
+    </ng-template>
+    <ng-template pTemplate="opposite" let-event>
+      <small class="p-text-secondary">{{ event.status }}</small>
+    </ng-template>
+  </p-timeline> -->
+  <!-- <div class="overflow-x-scroll"> -->
+    <p-timeline [value]="events" styleClass="customized-timeline" [layout]="'horizontal'">
+      <ng-template pTemplate="marker" let-event>
+          <span 
+              class="flex w-2rem h-2rem align-items-center justify-content-center text-white border-circle z-1 shadow-1" 
+              [style]="{ 'background-color': event.color }">
+                  <i [class]="event.icon"></i>
+          </span>
+      </ng-template>
+      <ng-template pTemplate="content" let-event>
+          <p-card [header]="event.status" [subheader]="event.date" styleClass="w-15rem mx-3">
+              <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate
+                  neque quas!
+              </p>
+          </p-card>
+      </ng-template>
+      <ng-template pTemplate="opposite" let-event>
+        <span class="text-white w-full flex align-content-start"> {{event.date}} </span>
+      </ng-template>
+    </p-timeline>
+  <!-- </div> -->
+
 </div>
