--- a/src/app/components/personal-info/personal-info.component.html
+++ b/src/app/components/personal-info/personal-info.component.html
@@ -1,7 +1,7 @@
   <div class="flex flex-column gap-6 sm:gap-7 align-items-center mt-8 sm:mt-5 pt-8 sm:pt-6">
     <div class="flex gap-2 sm:gap-4 fadein animation-duration-1000">
       <img src="assets/DLopez-cv-picture.png" alt="Daniel Lopez picture" class="w-8rem sm:w-11rem">
-      <div class="flex flex-column justify-content-between text-5xl sm:text-6xl text-800">
+      <div class="flex flex-column justify-content-between text-5xl sm:text-6xl text-900 font-light">
         <span class="">DANIEL</span>
         <span class="">LÓPEZ</span>
         <span class="">FERNÁNDEZ</span>
