--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@ body {
     // background-image: url("./assets/dark-background-1-tiled.png");
     // background-color: var(--surface-500);
     // background: radial-gradient(ellipse at top , rgba(10,10,10) 0%, rgba(30,30,30) 100%);
-     background: linear-gradient(95deg, rgba(5,5,5) 0%, rgba(10,10,10) 130%); //BETTER, LIGHT VERSION: background: linear-gradient(95deg, rgba(225,225,225) 0%, rgba(110,110,110) 130%);
+    background: linear-gradient(95deg, rgba(225,225,225) 0%, rgba(110,110,110) 130%); // background: linear-gradient(95deg, rgba(5,5,5) 0%, rgba(10,10,10) 130%); 
     background-size: cover;
     font-family: "Raleway", sans-serif;
     font-optical-sizing: auto;
