--- a/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.html
+++ b/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.html
@@ -9,36 +9,36 @@
     <div class="flex flex-column align-items-center w-full pb-3">
       <div class="flex flex-column text-center align-items-center w-full" style="min-height: 7rem;">
         <!-- TITLE -->
-        <p class="text-primary-600 text-lg mb-0"> 
+        <p class="text-primary-500 text-lg mb-0"> 
           {{title}} 
-          <span *ngIf="company" class="font-light text-primary-700">
+          <span *ngIf="company" class="font-light text-primary-600">
             at
             <a 
               href="{{url}}" 
               target="_blank" 
               (mouseenter)="companyUrlHovered=true" 
               (mouseleave)="companyUrlHovered=false"
-              class="text-primary-900 hover:text-cyan-500 "
+              class="text-primary-600 hover:text-cyan-500 "
             >
               {{company}} 
             </a>
           </span>
         </p>
         <!-- LOCATION AND DATE -->
-        <p class="text-600 flex flex-wrap align-items-center justify-content-center gap-2 mt-2">
+        <p class="text-800 flex flex-wrap align-items-center justify-content-center gap-2 mt-2">
           <span>
             <!-- <i class="pi pi-map-marker mr-1 sm:mr-2"></i> -->
-            {{location}}</span> <span class="hidden md:flex text-400">|</span> <span>{{date}}</span>
+            {{location}}</span> <span class="hidden md:flex text-600 font-light">|</span> <span>{{date}}</span>
         </p>
       </div>
       <!-- EXPAND ICON -->
-      <div class="flex align-items-end pb-1 expand-icon" [style]="!expandablePanel.collapsed ? 'color: transparent' : 'color: var(--surface-200)'">
+      <div class="flex align-items-end pb-1 expand-icon" [style]="!expandablePanel.collapsed ? 'color: transparent' : 'color: var(--surface-100)'">
         <i [class]="' ' + (expandablePanel.collapsed ? 'pi pi-plus' : '')"></i> 
       </div>
     </div>
   </ng-template>
   <div class="flex flex-column justify-content-between h-full">
-    <p #theDescription class="text-700 text-justify">
+    <p #theDescription class="text-800 text-justify">
       {{description}}
     </p>
     <div class="flex justify-content-center transition-duration-300'">    <!-- [class]="expandablePanel.collapsed ? 'text-100' : 'text-200' -->
