--- a/src/app/components/experience-section/experience-item/experience-item.component.html
+++ b/src/app/components/experience-section/experience-item/experience-item.component.html
@@ -1,6 +1,6 @@
 <p-panel 
   #expandablePanel 
-  styleClass="experience-panel-2 cursor-pointer" 
+  styleClass="experience-panel-3 cursor-pointer" 
   [toggleable]="true" 
   [collapsed]="collapsed ?? true" 
   (click)="!companyUrlHovered ? expandablePanel.toggle($event) : null"
@@ -8,32 +8,32 @@
   <ng-template pTemplate="header">
     <div class="flex flex-column flex-1">
       <div class="flex gap-3 title justify-content-between">
-        <p class="text-primary-500 text-lg mb-0"> 
-          {{title.toUpperCase()}} 
-          <span *ngIf="company" class="font-light text-primary-600">
-            AT 
+        <p class="text-200 text-lg mb-0"> 
+          {{title}} 
+          <span *ngIf="company" class="font-light text-300">
+            at
             <a 
               href="{{url}}" 
               target="_blank" 
               (mouseenter)="companyUrlHovered=true" 
               (mouseleave)="companyUrlHovered=false"
-              class="text-primary-600 hover:text-cyan-500 "
+              class="text-gradient hover:text-cyan-500 "
             >
-              {{company.toUpperCase()}} 
+              {{company}} 
             </a>
           </span>
         </p>
-        <div class="flex align-items-end pb-1 expand-icon" [style]="!expandablePanel.collapsed ? 'color: transparent' : 'color: var(--primary-500)'">
+        <div class="flex align-items-end pb-1 expand-icon" [style]="!expandablePanel.collapsed ? 'color: transparent' : 'color: var(--surface-200)'">
           <i [class]="' ' + (expandablePanel.collapsed ? 'pi pi-chevron-down' : '')"></i> 
         </div>
       </div>
 
-      <p class="text-700 flex flex-wrap align-items-center gap-2  h-full align-content-end">
+      <p class="text-400 flex flex-wrap align-items-center gap-2  h-full align-content-end">
         <span><i class="pi pi-map-marker mr-1 sm:mr-2"></i>{{location}}</span> <span class="hidden md:flex text-500">|</span> <span>{{date}}</span>
       </p>
     </div>
   </ng-template>
-  <p #theDescription class="text-800 text-justify">
+  <p #theDescription class="text-200 text-justify">
     {{description}}
   </p>
   <div class="flex justify-content-center transition-duration-300'">    <!-- [class]="expandablePanel.collapsed ? 'text-100' : 'text-200' -->
