--- a/src/app/components/education-section/education-section.component.html
+++ b/src/app/components/education-section/education-section.component.html
@@ -1,5 +1,5 @@
 <div class=" animation-duration-1000 animation-ease-in flex flex-column align-items-center gap-7">
-  <span #title class="text-5xl font-light text-white opacity-0">EDUCATION</span>
+  <span #title class="text-5xl font-light text-100 opacity-0">EDUCATION</span>
   <!-- <p-timeline [value]="events" [layout]="'horizontal'">
     <ng-template pTemplate="content" let-event>
         <small class="p-text-secondary">{{ event.date }}</small>
@@ -9,7 +9,8 @@
     </ng-template>
   </p-timeline> -->
   <!-- <div class="overflow-x-scroll"> -->
-    <p-timeline [value]="events" styleClass="customized-timeline" [layout]="'horizontal'">
+
+    <!-- <p-timeline [value]="events" styleClass="customized-timeline" [layout]="'horizontal'">
       <ng-template pTemplate="marker" let-event>
           <span 
               class="flex w-2rem h-2rem align-items-center justify-content-center text-white border-circle z-1 shadow-1" 
@@ -28,7 +29,8 @@
       <ng-template pTemplate="opposite" let-event>
         <span class="text-white w-full flex align-content-start"> {{event.date}} </span>
       </ng-template>
-    </p-timeline>
-  <!-- </div> -->
+    </p-timeline> -->
 
+  <!-- </div> -->
+  <app-timeline [events]="events"></app-timeline>
 </div>
