--- a/src/app/components/education-section/timeline/timeline.component.html
+++ b/src/app/components/education-section/timeline/timeline.component.html
@@ -7,8 +7,8 @@
     </div>
     <div class="event-card flex flex-column gap-3 align-items-center p-3 w-15rem h-12rem">
       <span class="text-center text-pink-600 h-2rem">{{event.title}}</span>
-      <span class="text-200">{{event.location}}</span>
-      <span class="text-justify text-sm mt-2">{{event.description}}</span>
+      <span class="text-300">{{event.location}}</span>
+      <span class="text-justify text-sm mt-2 text-100">{{event.description}}</span>
     </div>
   </div>
 </div>
