--- a/src/app/components/education-section/education-section.component.scss
+++ b/src/app/components/education-section/education-section.component.scss
@@ -4,3 +4,26 @@
   padding-right: 1rem;
   color: black;
 }
+
+/* For WebKit browsers (Chrome, Safari) */
+::-webkit-scrollbar {
+  // width: 8px;
+  height: 8px; /* Thinner scrollbar for horizontal scrolling */
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; /* Transparent track */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Darker color for thumb */
+  border-radius: 10px; /* Rounder scrollbar */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Darker when hovering */
+}
+
+.timeline-container {
+  mask-image: linear-gradient(to right, transparent 0%, black 28px, black calc(100% - 28px), transparent 100%);
+}
