--- a/src/app/components/experience-section/experience-item/experience-item.component.scss
+++ b/src/app/components/experience-section/experience-item/experience-item.component.scss
@@ -181,7 +181,7 @@
     // background-color: rgb(0,0,0,0.9); 
     border: 1px solid rgb(100, 100, 100,0.1);
 
-    background: color-mix(in srgb, var(--surface-900) 35%, transparent);//var(--surface-100);//rgba(255, 255, 255, 0.85);
+    background: color-mix(in srgb, black 75%, transparent);//var(--surface-100);//rgba(255, 255, 255, 0.85);
     box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(6.6px);
     -webkit-backdrop-filter: blur(6.6px);
@@ -205,17 +205,18 @@
       //&:not(.p-panel-expanded) {
         .title *{
             transition-duration: 300ms;
-            color: var(--pink-600) !important;
-            border-bottom-color: var(--pink-600);
+            color: var(--primary-600) !important;
+            border-bottom-color: var(--primary-600);
             
             a {
-              background: -webkit-linear-gradient(60deg, var(--pink-200) 0%, var(--pink-700) 100%);//-webkit-linear-gradient(60deg, var(--primary-600) 20%, var(--pink-600) 120%); //background: var(--pink-600);
+              transition-duration: 300ms;
+              background: -webkit-linear-gradient(60deg, var(--primary-600) 0%, var(--pink-600) 120%);//-webkit-linear-gradient(60deg, var(--pink-200) 0%, var(--pink-700) 100%);//-webkit-linear-gradient(60deg, var(--primary-600) 20%, var(--pink-600) 120%); //background: var(--pink-600);
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;
             }
             a:hover {
                 // color: var(--pink-900) !important;
-                border-bottom: 0.5px solid var(--pink-500);
+                border-bottom: 0.5px solid var(--primary-600);
             }
           }
       //}
