--- a/src/app/components/experience-section/experience-section.component.scss
+++ b/src/app/components/experience-section/experience-section.component.scss
@@ -21,7 +21,7 @@
     // background-color: rgb(0,0,0,0.9); 
     border: 1px solid rgb(100, 100, 100,0.4);
 
-    background: color-mix(in srgb, rgba(200,200,200) 45%, transparent);//var(--surface-100);//rgba(255, 255, 255, 0.85);
+    background: color-mix(in srgb, var(--surface-400) 45%, transparent);//var(--surface-100);//rgba(255, 255, 255, 0.85);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(6.6px);
     -webkit-backdrop-filter: blur(6.6px);
