--- a/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.html
+++ b/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.html
@@ -6,39 +6,41 @@
   [collapsed]="true"
 > 
   <!-- EXPAND ICON -->
-  <div class="absolute flex align-items-end pb-1 expand-icon" [style]="'bottom: 2rem; left: 47%;' + (!expandablePanel.collapsed ? 'color: transparent;' : 'color: var(--surface-100);')">
+  <div class="absolute flex align-items-end pb-1 expand-icon" [style]="'bottom: 2rem; left: 47%;' + (!expandablePanel.collapsed ? 'color: transparent;' : 'color: var(--surface-300);')">
     <i [class]="' ' + (expandablePanel.collapsed ? 'pi pi-plus' : '')"></i> 
   </div>
   <ng-template pTemplate="header">
     <div class="relative flex flex-column text-center align-items-center w-full pb-3">
       <!-- <div class="flex flex-column text-center align-items-center w-full" style="min-height: 7rem;"> -->
         <!-- TITLE -->
-        <p class="text-pink-500 text-lg mb-0"> 
+         <div class="title">
+        <p class="text-700 text-lg mb-0"> 
           {{title}} 
-          <span *ngIf="company" class="font-light text-pink-600">
+          <span *ngIf="company" class="font-light text-600">
             at
             <a 
               href="{{url}}" 
               target="_blank" 
               (mouseenter)="companyUrlHovered=true" 
               (mouseleave)="companyUrlHovered=false"
-              class="text-pink-700 hover:text-cyan-500 "
+              class="text-gradient hover:text-cyan-500 "
             >
               {{company}} 
             </a>
           </span>
         </p>
+      </div>
         <!-- LOCATION AND DATE -->
-        <p class="text-200 flex flex-wrap align-items-center justify-content-center gap-2 mt-2">
+        <p class="text-400 flex flex-wrap align-items-center justify-content-center gap-2 mt-2">
           <span>
             <!-- <i class="pi pi-map-marker mr-1 sm:mr-2"></i> -->
-            {{location}}</span> <span class="hidden md:flex text-600 font-light">|</span> <span>{{date}}</span>
+            {{location}}</span> <span class="hidden md:flex text-200 font-light">|</span> <span>{{date}}</span>
         </p>
       <!-- </div> -->
     </div>
   </ng-template>
   <div class="flex flex-column justify-content-between h-full">
-    <p #theDescription class="text-200 text-justify">
+    <p #theDescription class="text-600 text-justify">
       {{description}}
     </p>
     <div class="flex justify-content-center transition-duration-300'">    <!-- [class]="expandablePanel.collapsed ? 'text-100' : 'text-200' -->
