--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@ body {
     // background-image: url("./assets/dark-background-1-tiled.png");
     // background-color: var(--surface-500);
     // background: radial-gradient(ellipse at top , rgba(10,10,10) 0%, rgba(30,30,30) 100%);
-    background: linear-gradient(95deg, rgba(255,255,255) 0%, rgba(140,140,140) 130%); // background: linear-gradient(95deg, rgba(5,5,5) 0%, rgba(10,10,10) 130%); 
+    background: linear-gradient(95deg, rgba(5,5,5) 0%, rgba(10,10,10) 130%);//linear-gradient(90deg, rgba(255,255,255) 0%, rgba(140,140,140) 200%); // background: linear-gradient(95deg, rgba(5,5,5) 0%, rgba(10,10,10) 130%); //radial-gradient(circle at top right, rgba(150,150,150) -30%, rgba(220,220,220) 30%);
     background-size: cover;
     font-family: "Raleway", sans-serif;
     font-optical-sizing: auto;
