--- a/src/app/components/experience-section/experience-section.component.scss
+++ b/src/app/components/experience-section/experience-section.component.scss
@@ -14,10 +14,10 @@
 }
 
 .experience-card {
-    max-height: 550px;
-    overflow-y: scroll; 
-    overflow-x: hidden;
-    border-radius: 20px; 
+    max-height: 600px;
+    // overflow-y: scroll; 
+    // overflow-x: hidden;
+    border-radius: 150px; 
     // background-color: rgb(0,0,0,0.9); 
     border: 1px solid rgb(100, 100, 100,0.5);
 
@@ -25,6 +25,12 @@
     // box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     // backdrop-filter: blur(6.6px);
     // -webkit-backdrop-filter: blur(6.6px);
+}
+
+.experience-items {
+
+  overflow-y: scroll; 
+  overflow-x: hidden;
 }
 
 /* width */
