--- a/src/app/components/experience-section/experience-section.component.scss
+++ b/src/app/components/experience-section/experience-section.component.scss
@@ -14,7 +14,7 @@
 }
 
 .experience-card {
-    max-height: 600px;
+    max-height: 620px;
     // overflow-y: scroll; 
     // overflow-x: hidden;
     border-radius: 150px; 
@@ -25,12 +25,14 @@
     // box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     // backdrop-filter: blur(6.6px);
     // -webkit-backdrop-filter: blur(6.6px);
+    // mask-image: linear-gradient(to bottom, transparent 0%, black 28px, black calc(100% - 28px), transparent 100%);
 }
 
 .experience-items {
 
   overflow-y: scroll; 
   overflow-x: hidden;
+  mask-image: linear-gradient(to bottom, transparent 0%, black 0px, black calc(100% - 38px), transparent 100%);
 }
 
 /* width */
